--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_text">Title</string>
     <string name="description_text">Description</string>
     <string name="save_text">Save</string>
+    <string name="delete_all_notes">Delete All Notes</string>
 </resources>
